components/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/created-by: KAM
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: jd1
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: frontend
    spec:
      containers:
      - imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 8090
          initialDelaySeconds: 10
          periodSeconds: 10
        name: container-image
        ports:
        - containerPort: 8090
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          tcpSocket:
            port: 8090
        resources: {}
status: {}
