components/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/created-by: KAM
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: jd1
  name: frontend
spec:
  ports:
  - port: 8090
    targetPort: 8090
  selector:
    app.kubernetes.io/instance: frontend
status:
  loadBalancer: {}
