components/frontend/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/created-by: KAM
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: jd1
  name: frontend
spec:
  host: myroute
  port:
    targetPort: 8090
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: frontend
    weight: 100
status: {}
